# todo-drf

./: README.md  pyproject.toml
todo_drf/api/: serializers.py  urls.py  views.py
todo_drf/api/migrations/: 0001_initial.py
todo_drf/todo_drf/: asgi.py  settings.py  urls.py  wsgi.py
