[tool.poetry]
name = "todo-drf"
version = "0.1.0"
description = ""
authors = ["Jolene Valenzuela <jolene@mahusai.ph>"]

[tool.poetry.dependencies]
python = "^3.9"
asgiref = "^3.5.2"
Django = "^4.1"
djangorestframework = "^3.13.1"
pytz = "^2022.1"
sqlparse = "^0.4.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
